creando seed para sql

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,28 @@
-APP_NAME=ms-seed
-PORT=3000
-URL_CORE=http://localhost:3000
+APP_NAME=users-antalk-ms
+PORT=33000
+URL_CORE=http://localhost:33000
+
+DATABASE_HOST=postgres
+DATABASE_PORT=5432
+DATABASE_USER=users_ms
+DATABASE_PASSWORD=users_ms
+DATABASE_DB=users_ms
+DATABASE_CONNECTION=pg
+DATABASE_AUTO_LOAD_ENTITIES=false
+DATABASE_TYPE="postgres"
+
+RABBITMQ_URI=amqp://guest:guest@notifications_ms_rabbitmq:5672//
+RABBITMQ_CONNECTION_WAIT=false
+RABBITMQ_EXCHANGE=notifications_exchange
+RABBITMQ_EXCHANGE_TYPE=direct
+RABBITMQ_HEARTBEAT=10
+RABBITMQ_QUEUE=notifications_queue
+RABBITMQ_EXCHANGE_ROUTING_KEY=pepe
+
+MQ_EMAIL_NOTIFICATION_TOPIC_KEY="mq.key.oauth.notify.email"
+MQ_EMAIL_NOTIFICATION_RETRY=0
+
+JWT_SECRET_KEY="testing"
+JWT_SECRET_KEY_REFRESH_TOKEN="testing"
+
+PASSWORD_USER_DEFAULT="testing"
