--- a/.env
+++ b/.env
@@ -1,3 +1,17 @@
-APP_NAME=ms-seed
-PORT=3000
-URL_CORE=http://localhost:3000
+APP_NAME=users-antalk-ms
+PORT=33000
+URL_CORE=http://localhost:33000
+
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=users_ms
+DATABASE_PASSWORD=users_ms
+DATABASE_DB=users_ms
+DATABASE_CONNECTION=pg
+DATABASE_AUTO_LOAD_ENTITIES=false
+DATABASE_TYPE="postgres"
+
+JWT_SECRET_KEY="testing"
+JWT_SECRET_KEY_REFRESH_TOKEN="testing"
+
+PASSWORD_USER_DEFAULT="testing"
