--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ms-seed-antalk",
+  "name": "ms-seed-ccu",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -10,56 +10,78 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "SEED_ENV=dev nest start --watch",
+    "start:dev": "USERS_CCU_ENV=dev node dist/src/main",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "SEED_ENV=prod node dist/main",
-    "start:local": "SEED_ENV=local nest start src --watch",
+    "start:prod": "USERS_CCU_ENV=prod node dist/main",
+    "start:local": "USERS_CCU_ENV=local nest start src --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs -d ./ormconfig.ts",
+    "typeorm:dev": "USERS_CCU_ENV=dev typeorm-ts-node-commonjs -d ./ormconfig.ts",
+    "typeorm:local": "USERS_CCU_ENV=local typeorm-ts-node-commonjs -d ./ormconfig.ts",
+    "migration:create": "node ./CreateMigration.js",
+    "migration:run": "npm run typeorm:local migration:run",
+    "migration:revert": "npm run typeorm:local migration:revert",
+    "migration:show": "npm run typeorm:local migration:show"
   },
   "dependencies": {
-    "@nestjs/common": "^9.3.10",
+    "@golevelup/nestjs-rabbitmq": "^3.7.0",
+    "@nestjs/common": "^9.4.0",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.3.10",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^9.3.10",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@types/amqplib": "^0.10.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/webpack-env": "^1.18.0",
-    "axios": "^1.3.4",
+    "amqplib": "^0.10.3",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "better-console-log-plus": "^1.4.3",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "helmet": "^6.0.1",
+    "dotenv": "^16.0.3",
+    "handlebars": "^4.7.7",
+    "helmet": "^7.0.0",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.4.0",
-    "rxjs": "^7.8.0"
+    "rimraf": "^5.0.0",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.16",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.3.0",
-    "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.3.10",
+    "@nestjs/cli": "^9.4.2",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.4.1",
     "@types/express": "^4.17.17",
-    "@types/jest": "29.5.0",
-    "@types/node": "^18.15.3",
+    "@types/jest": "29.5.1",
+    "@types/node": "^20.1.2",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "29.5.0",
-    "prettier": "^2.8.5",
+    "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "4.1.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.75.0"
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.0.4",
+    "webpack": "^5.82.1"
   },
   "jest": {
     "moduleFileExtensions": [
