--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ URL_CORE=http://localhost:33000
 
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=users_ms
-DATABASE_PASSWORD=users_ms
-DATABASE_DB=users_ms
+DATABASE_USER=auth_ms
+DATABASE_PASSWORD=auth_ms
+DATABASE_DB=auth_ms
 DATABASE_CONNECTION=pg
 DATABASE_AUTO_LOAD_ENTITIES=false
 DATABASE_TYPE="postgres"
