--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3'
 
 services:
   postgres:
-    container_name: users_ms_postgres
+    container_name: auth_ms_postgres
     image: "postgres:15.2-alpine"
     user: postgres
     environment:
-      - POSTGRES_USER=users_ms
-      - POSTGRES_PASSWORD=users_ms
-      - POSTGRES_DB=users_ms
+      - POSTGRES_USER=auth_ms
+      - POSTGRES_PASSWORD=auth_ms
+      - POSTGRES_DB=auth_ms
     ports:
       - 5432:5432
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/dataeqweqw
 volumes:
   postgres_data:
     driver: local
