--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/microservices": "^10.1.3",
     "@types/amqplib": "^0.10.1",
     "@types/bcrypt": "^5.0.0",
     "@types/webpack-env": "^1.18.1",
