--- a/package.json
+++ b/package.json
@@ -30,14 +30,16 @@
   },
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^4.0.0",
-    "@nestjs/common": "^10.1.3",
+    "@grpc/grpc-js": "^1.12.5",
+    "@grpc/reflection": "^1.0.4",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/microservices": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
     "@nestjs/typeorm": "^10.0.0",
-    "@nestjs/microservices": "^10.1.3",
     "@types/amqplib": "^0.10.1",
     "@types/bcrypt": "^5.0.0",
     "@types/webpack-env": "^1.18.1",
@@ -52,6 +54,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
     "pg": "^8.11.2",
+    "protoc-gen-ts": "^0.8.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
@@ -80,6 +83,7 @@
     "ts-jest": "29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
+    "ts-proto": "^2.6.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2"
