--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "google-protobuf": "^3.21.4",
+    "grpc": "^1.24.11",
     "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
     "pg": "^8.11.2",
