--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
     "pg": "^8.11.2",
-    "protoc-gen-ts": "^0.8.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
@@ -78,8 +77,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "grpc-tools": "^1.12.4",
     "jest": "29.6.2",
     "prettier": "^3.0.1",
+    "protoc-gen-ts": "^0.8.7",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "29.1.1",
