cambiando docker compose y main

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-APP_NAME=users-antalk-ms
+APP_NAME=chess_auth-ms
 PORT=33000
 URL_CORE=http://localhost:33000
 
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=auth_ms
-DATABASE_PASSWORD=auth_ms
-DATABASE_DB=auth_ms
+DATABASE_USER=chess_ms
+DATABASE_PASSWORD=chess_ms
+DATABASE_DB=chess_ms
 DATABASE_CONNECTION=pg
 DATABASE_AUTO_LOAD_ENTITIES=false
 DATABASE_TYPE="postgres"
