--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.1.3",
     "@types/express": "^4.17.17",
+    "@types/google-protobuf": "^3.15.12",
     "@types/jest": "29.5.3",
     "@types/node": "^20.4.9",
     "@types/supertest": "^2.0.12",
