modificaciones para windows

--- a/.env
+++ b/.env
@@ -11,6 +11,17 @@ DATABASE_CONNECTION=pg
 DATABASE_AUTO_LOAD_ENTITIES=false
 DATABASE_TYPE="postgres"
 
+RABBITMQ_URI=amqp://guest:guest@52.3.19.173:5672//
+RABBITMQ_CONNECTION_WAIT=false
+RABBITMQ_EXCHANGE=notifications_exchange
+RABBITMQ_EXCHANGE_TYPE=direct
+RABBITMQ_HEARTBEAT=10
+RABBITMQ_QUEUE=notifications_queue
+RABBITMQ_EXCHANGE_ROUTING_KEY=pepe
+
+MQ_EMAIL_NOTIFICATION_TOPIC_KEY="mq.key.oauth.notify.email"
+MQ_EMAIL_NOTIFICATION_RETRY=0
+
 JWT_SECRET_KEY="testing"
 JWT_SECRET_KEY_REFRESH_TOKEN="testing"
 
