--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "CHESS_MS=dev node dist/src/main",
+    "start:dev": "cross-env CHESS_MS=dev node dist/src/main",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "CHESS_MS=prod node dist/main",
-    "start:local": "CHESS_MS=local nest start src --watch",
+    "start:prod": "cross-envCHESS_MS=prod node dist/main",
+    "start:local": "cross-envCHESS_MS=local nest start src --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,7 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs -d ./ormconfig.ts",
     "typeorm:dev": "CHESS_MS=dev typeorm-ts-node-commonjs -d ./ormconfig.ts",
-    "typeorm:local": "CHESS_MS=local typeorm-ts-node-commonjs -d ./ormconfig.ts",
+    "typeorm:local": "cross-env CHESS_MS=local typeorm-ts-node-commonjs -d ./ormconfig.ts",
     "migration:create": "node ./CreateMigration.js",
     "migration:run": "npm run typeorm:local migration:run",
     "migration:revert": "npm run typeorm:local migration:revert",
