--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start": "nest start",
     "start:dev": "cross-env CHESS_MS=dev node dist/src/main",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "cross-envCHESS_MS=prod node dist/main",
-    "start:local": "cross-envCHESS_MS=local nest start src --watch",
+    "start:prod": "cross-env CHESS_MS=prod node dist/main",
+    "start:local": "cross-env CHESS_MS=local nest start src --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,7 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs -d ./ormconfig.ts",
     "typeorm:dev": "CHESS_MS=dev typeorm-ts-node-commonjs -d ./ormconfig.ts",
-    "typeorm:local": "cross-env CHESS_MS=local typeorm-ts-node-commonjs -d ./ormconfig.ts",
+    "typeorm:local": "CHESS_MS=local typeorm-ts-node-commonjs -d ./ormconfig.ts",
     "migration:create": "node ./CreateMigration.js",
     "migration:run": "npm run typeorm:local migration:run",
     "migration:revert": "npm run typeorm:local migration:revert",
@@ -50,6 +50,7 @@
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "google-protobuf": "^3.21.4",
     "grpc": "^1.24.11",
