--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@grpc/proto-loader": "^0.7.13",
     "@nestjs/cli": "^10.1.11",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.1.3",
